Atualizadas tabelas.sql com o source conforme nome original da tabela do banco.
Atualizado o erp.yml com o nome original das tabelas no banco

Criado um novo arquivo, schema.yml para fazer os testes nas novas tabelas "stg_erp__nometabela.sql".

Testes de validaçao nos dados fonte no erp.yml

Testes de validação nos dados nas novas tabelas no schema.yml

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -2,7 +2,7 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'my_new_project'
+name: 'dbt_adventure_works'
 version: '1.0.0'
 config-version: 2
 
@@ -36,7 +36,14 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 
 models:
-  my_new_project:
+  dbt_adventure_works:
     # Applies to all files under models/example/
-    example:
+    staging:
+      +schema: aw_stg
+      +materialized: view
+    intermediate:
+      +schema: aw_int
+      +materialized: view
+    marts:
+      +schema: aw_marts
       +materialized: table
